fix scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 
 body {
-    overflow: hidden;
     margin: 0;
     padding: 0;
     background: black;
@@ -60,3 +59,11 @@ body {
   margin: 0;
 }
 
+html {
+  overflow:   scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
